# music-machine

./: CLAUDE.md  README.md  package.json
experiments/small/: .gitignore  pyproject.toml
experiments/small/misc/: async_button_demo.py  async_smoke.py  notebook.py  prototype.py
experiments/small/reports/: eval_audio_analyzer.py  review.py  verify_audio_analyzer.py  verify_stem_splitter.py  verify_youtube_fetcher.py
experiments/small/scripts/: jobs_store.py  main.py  metadata_store.py  worker.py
experiments/small/scripts/eval/: fetch_songs.py  results.json  results_ensemble.json  run_eval.py  run_eval_ensemble.py  songs.json  sweep.json  sweep.py  sweep2.json  variants.py
experiments/subtraction/: index.ts  package.json  tsconfig.json
src/: App.tsx  index.css
src/components/: BpmBar.tsx  SubtractPanel.tsx  TapeList.tsx  TapeRow.tsx  Upload.tsx
src/hooks/: useWaveSurfer.ts
src/lib/audio/: asd.ts  bpm.ts  bufferStore.ts  context.ts  cut.ts  decode.ts  normalize.ts  pack.ts  subtract.ts  types.ts  wav.ts
src/state/: useProjectStore.ts
src/workers/: essentia.worker.ts
