[project]
name = "small"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "marimo>=0.23.6",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "python-dotenv>=1.2.2",
    "replicate>=1.0.7",
    "soundfile>=0.13.1",
    "yt-dlp>=2026.3.17",
]

[tool.marimo.runtime]
dotenv = [".env"]
